force-app/main/default/objects/Project__c/fields/Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>Duration_Days__c</fullName>
    <label>Duration (Days)</label>
    <formula>IF(AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c))), End_Date__c - Start_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>