force-app/main/default/objects/Project__c/fields/Encrypted_Token__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Token__c</fullName>
    <label>Access Token</label>
    <length>64</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>