force-app/main/default/objects/Project__c/fields/Open_Task_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Task_Count__c</fullName>
    <label>Open Task Count</label>
    <summaryFilterItems>
        <field>Project_Task__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>