force-app/main/default/objects/Project__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Cost Saving</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>