force-app/main/default/objects/Project__c/fields/Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>Reference_Code__c</fullName>
    <label>Reference Code</label>
    <length>40</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
    <type>Text</type>
</CustomField>