force-app/main/default/objects/Project__c/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <label>Site Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>