force-app/main/default/objects/Project__c/fields/Total_Task_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Task_Hours__c</fullName>
    <label>Total Task Hours</label>
    <summarizedField>Project_Task__c.Hours__c</summarizedField>
    <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>