force-app/main/default/objects/Project__c/recordTypes/Client.recordType-meta.xml
<RecordType>
    <fullName>Client</fullName>
    <active>true</active>
    <description>Client-facing delivery</description>
    <label>Client</label>
</RecordType>