force-app/main/default/objects/Project__c/validationRules/Budget_Required_When_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Budget_Required_When_Active</fullName>
    <active>false</active>
    <description>Disabled during data migration</description>
    <errorConditionFormula>AND(Is_Active__c, ISBLANK(Budget__c), ISPICKVAL(Status__c, &quot;In Progress&quot;))</errorConditionFormula>
    <errorMessage>Budget is required for active in-progress projects.</errorMessage>
</ValidationRule>