force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Budget__c</columns>
    <columns>Duration_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>